task-queue/redis/k8s_postgres_rabbitmq/ingress_service.yaml
# https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: flask-backend
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-server-service
                port:
                  number: 3000
